[package]
name = "cargo-machete-nk"
edition = "2021"
version = "0.8.0"
description = "Find unused dependencies with this one weird trick!"
authors = ["Benjamin Bouvier <public@benj.me>"]
repository = "https://github.com/bnjbvr/cargo-machete"
keywords = []
categories = []
license = "MIT"
readme = "README.md"

[dependencies]
anyhow = "1.0.57"
argh = "0.1.9"
cargo_metadata = "0.18.0"
cargo_toml = "0.16.2"
grep = "0.2.8"
log = "0.4.16"
pretty_env_logger = "0.5.0"
rayon = "1.5.2"
toml_edit = "0.20.0"
walkdir = "2.3.2"
sha2 = "0.10.8"
hex = "0.4.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
#[profile.release]
#debug = true
